# officecat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
officecat/: __init__.py  cli.py  converter.py  detect.py  models.py
officecat/readers/: __init__.py  _errors.py  csv_.py  docx.py  pptx.py  xlsx.py
officecat/renderers/: json_.py  plain.py  rich.py
officecat/tui/: app.py  docx_view.py  pptx_view.py  xlsx_view.py
src/officecat/: __init__.py
tests/fixtures/: corrupt.xlsx  empty.docx  empty.pptx  empty.xlsx  sample.csv  sample.docx  sample.pptx  sample.tsv  sample.xlsx
