[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "officecat"
version = "0.1.0"
description = "View Office files in the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "textual>=0.50",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
]

[project.scripts]
officecat = "officecat.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
