[project]
name = "officecat"
dynamic = ["version"]
description = "View Office files in the terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mubbie Idoko"},
]
keywords = ["office", "cli", "docx", "xlsx", "pptx", "csv", "terminal", "viewer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "textual>=0.50",
    "python-docx>=1.0",
    "python-pptx>=0.6",
    "python-calamine>=0.2",
    "rich",
]

[project.urls]
Homepage = "https://github.com/mubbie/officecat"
Repository = "https://github.com/mubbie/officecat"
Issues = "https://github.com/mubbie/officecat/issues"

[project.scripts]
officecat = "officecat.cli:cli_entry"
ocat = "officecat.cli:cli_entry"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "officecat/__init__.py"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
